feat: regenerate mnemonic
